<resources>

    //input infomaton user
    <string name="app_name">GoPDU</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng kí</string>
    <string name="lastNameHint">Họ*</string>
    <string name="firstNameHint">Tên*</string>
    <string name="areaCode">+84</string>
    <string name="phoneHint">389512898</string>
    <string name="emailHint">Email*</string>
    <string name="dateOfBirth">Ngày sinh</string>
    <string name="pickADate">Chọn ngày</string>

    //Error
    <string name="errorFirstName">Không được để trống họ</string>
    <string name="errorLastName">Không được để trống tên</string>
    <string name="errorDate">Không được để trống ngày sinh</string>
    <string name="errorEmail">Không được để trống địa chỉ email</string>
    <string name="errorPhone">Không được để trống số điện thoại</string>
    <string name="exitsAccount">Đã tồn tại tài khoản này trên hệ thống</string>
    <string name="checkConnect">Vui lòng kiểm tra lại kết nối mạng</string>
    <string name="otpEmpty">Bạn chưa nhập đủ mã OTP</string>
    <string name="successLogin">Đăng nhập thành công</string>
    <string name="otpError">Sai mã xác thực vui lòng kiểm tra lại</string>
    <string name="registerSuccess">Đăng kí thành công</string>
    <string name="regexEmail">\\b[\\w.%-]+@[-.\\w]+\\.[A-Za-z]{2,4}\\b</string>
    <string name="errorEmailFormat">Định dạng email không đúng</string>
    <string name="wellcometoApp">Chào mừng bạn!</string>
    <string name="enterTheNumberPhone">Nhập số di động của bạn để tiếp tục</string>
    <string name="notExitsAccount">Chưa tồn tại tài khoản vui lòng đăng kí và đăng nhập lại</string>
    <string name="toast_msg_no_support">Thiết bị không hỗ trợ phần mềm</string>
    <string name="toast_msg_setup_service_google">Dịch vụ Google play đã được cài đặt</string>
    <string name="dialog_thongbao">Thông báo</string>
    <string name="dialog_title_close">Đóng</string>

    //Active
    <string name="Comfirm">Xác nhận</string>
    <string name="active">Kích hoạt</string>
    <string name="helperActivityOTP">GoPDU sẽ gửi một mã kích hoạt qua số điện thoại %1$s. Dùng mã kích hoạt vừa nhận để kích hoạt tài khoản></string>
    <string name="waiting">Vui lòng chờ trong giây lát</string>
    <string name="timerotp">Mã kích hoạt sẽ hết hạn trong: %1$d</string>
    <string name="sendagainotp">Yên cầu nhận lại mã</string>
    <string name="title_activity_customer_map">Map</string>
    <string name="whereDoYouGo">Bạn muốn đi đâu</string>
    <string name="searchLocation">Tìm điểm đến</string>
    <string name="pickOnMapView">Chọn bằng bản đồ</string>
    <string name="distance">%.1f km</string>
    <string name="booking">Booking: %1$s</string>

    //Menu main
    <string name="title_CustomerMap">Đặt chuyến đi</string>
    <string name="title_History">Hoạt động</string>
    <string name="title_programfile">Tài khoản</string>
    <string name="pickupHere">Đón tôi ở đây</string>
    <string name="backagain">Nhấn nút back thêm lần nữa để thoát khỏi ứng dụng</string>
    <string name="wherePickUp">Chúng tôi đón bạn ở đâu ?</string>
    <string name="destination">Điểm đến</string>
    <string name="pickup">Điểm đón</string>
    <string name="book">Đặt chuyến</string>
    <string name="cash">Tiền mặt: %1$s</string>
    <string name="down">down</string>
    <string name="up">up</string>
    <string name="country">VN</string>
    <string name="birthDateHint">Ngày sinh</string>
    <string name="toast_message_not_network_server">Vui lòng kiểm tra lại kết nối mạng</string>
    <string name="click_again_exits">Nhất quay lại một lần nữa để thoát ứng dụng</string>
    <string name="price">%1$s VNĐ</string>

    //Information
    <string name="nameInformationDriver">Tên </string>
    <string name="ageInformationDriver">Tuổi </string>
    <string name="licensePlateInformationDriver">Biển số xe </string>
    <string name="pickupShowScreen">Đón tôi ở đây</string>
    <string name="destinationShowScreen">Điểm đến</string>

    //driver query param
    <string name="paramID">id</string>
    <string name="paramName">name</string>
    <string name="paramGender">gender</string>
    <string name="paramBirthDate">birthdate</string>
    <string name="paramLicenseplate">licenseplates</string>
    <string name="paramImv_Driverface">imv_driverface</string>
    <string name="paramNumberPhone">numberphone</string>
    <string name="cancel">Hủy chuyến</string>
    <string name="patternVNĐ">###,###,###</string>

    //param firebase
    <string name="paramDriverAvailable">driversAvailable</string>
    <string name="paramDriverWorking">driverWorking</string>
    <string name="paramUser">User</string>
    <string name="paramDriver">Driver</string>
    <string name="paramCustomerRequest">customerRequest</string>
    <string name="paramCustomerId">customerRideId</string>
    <string name="paramDestinationLat">destinationLat</string>
    <string name="paramDestinationLogt">destinationLongt</string>
    <string name="paramPrice">price</string>
    <string name="paramL">l</string>
    <string name="paramCustomer">Customer</string>
    <string name="paramDriverRequest">DriverRequest</string>

    <string name="statusTrip">status</string>
    <string name="tripSuccess">success</string>
    <string name="tripPayment">payment</string>
    <string name="tripPickUp">pickup</string>
    <string name="tripDropOff">drop_off</string>
    <string name="tripCancel">cancel</string>
    <string name="tripWaitting">waitting</string>


    //Insert ratting param
    <string name="paramRating">rating</string>
    <string name="ratingNever">-2</string>

    <string name="title_activity_history_fragment">HistoryFragment</string>
    <string name="paramDriverId">driverid</string>
    <string name="paramPage">page</string>
    <string name="paramStatus">status</string>
    <string name="param_StateAll">all</string>
    <string name="param_StatusSuccess">success</string>
    <string name="Successs">Success</string>
    <string name="Cancel">Cancel</string>
    <string name="param_StateCancel">cancel</string>
    <string name="reciverAllData">Đã tải hết dữ liệu</string>
    <string name="title_activity_history_detail2">Map</string>
    <string name="paramUserId">userId</string>
    <string name="cancelTrip">Chuyến đi đang thực hiện không thể hủy</string>
    <string name="paramDriverRideId">driverRideId</string>
    <string name="paramDestination">destination</string>


</resources>
