<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/content_banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        tools:context=".activity.RegisterActivity"
        android:weightSum="20">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolBarTheme.ToolBarStyle"
            android:theme="@style/ToolBarTheme.ToolBarStyle"
            app:title="@string/register"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>
        <LinearLayout
            android:layout_marginTop="@dimen/margin60dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/paddingMain"
                android:paddingRight="@dimen/paddingMain">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_layout_white"
                    android:orientation="vertical"
                    android:padding="@dimen/padding5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <EditText
                            android:id="@+id/etfirstName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:hint="@string/firstNameHint" />

                        <EditText
                            android:id="@+id/etLastname"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/lastNameHint" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/etbirthDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8dp"
                        android:hint="@string/birthDateHint" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <ImageView
                            android:layout_width="29dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin8dp"
                            android:layout_weight="1"
                            android:src="@drawable/logo_viettnam" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin8dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/areaCode" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                        <EditText
                            android:id="@+id/etPhone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:hint="@string/phoneHint" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emailHint" />


                </LinearLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8dp"
                    android:background="@drawable/background_button_no_boder_blue"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>


</layout>


