<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/content_banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            tools:context=".activity.RegisterActivity"
            android:weightSum="20">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolBarTheme.ToolBarStyle"
                android:theme="@style/ToolBarTheme.ToolBarStyle"
                app:title="@string/login"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"/>
            <LinearLayout
                android:layout_marginTop="@dimen/margin105dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="16"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:padding="@dimen/padding20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wellcometoApp"
                        android:textSize="@dimen/bigFontMedium"
                        android:textStyle="bold"
                        android:textColor="@color/colorGray"
                        />
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enterTheNumberPhone"
                        android:textSize="@dimen/fontMedium"
                        android:textStyle="bold"
                        android:textColor="@color/colorGray"
                        />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:weightSum="10"
                        android:layout_marginTop="@dimen/margin16dp"
                        android:background="@drawable/background_layout_white"
                        >

                        <ImageView
                            android:padding="@dimen/padding5dp"
                            android:background="@color/colorWhite"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:src="@drawable/logo_viettnam" />

                        <TextView
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/areaCode"
                            android:textSize="@dimen/fontSmallBigger"
                            android:textColor="@color/colorBlack"
                            android:layout_marginRight="@dimen/margin10dp"
                            />

                        <EditText
                            android:paddingLeft="@dimen/padding10dp"
                            android:id="@+id/etPhone"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="7"
                            android:hint="@string/phoneHint"
                            android:background="@color/colorWhite"
                            android:textSize="@dimen/fontMediumBig"
                            android:inputType="number"
                            android:textStyle="bold"
                            />
                    </LinearLayout>
                    <Button
                        android:layout_marginTop="@dimen/margin24dp"
                        android:id="@+id/btnLogin"
                        style="@style/button.Login"
                        android:text="@string/login"/>
                    <Button
                        android:layout_marginTop="@dimen/margin24dp"
                        android:id="@+id/btnRegister"
                        style="@style/button.Login"
                        android:text="@string/register"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</layout>
