<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:id="@+id/cdlDestination"
        android:layout_marginBottom="@dimen/menuSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView

            android:id="@+id/bottom_sheet_des"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:behavior_peekHeight="@dimen/peekHeightMenu"
            app:layout_behavior="@string/bottom_sheet_behavior"
            android:background="@color/colorWhite">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding20dp"
                android:paddingLeft="@dimen/padding10dp"
                android:paddingRight="@dimen/padding10dp"
                android:background="@color/colorWhite"
                >
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontMediumSmall"
                    android:text="@string/whereDoYouGo"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>
                <LinearLayout
                    android:background="@drawable/background_round_white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding2dp"
                    android:weightSum="10"
                    android:layout_marginTop="@dimen/margin16dp"
                    android:layout_marginBottom="@dimen/margin10dp">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/width0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_location_on_blue_24dp"/>

                    <EditText
                        android:id="@+id/etSearch"
                        android:layout_width="@dimen/width0dp"
                        android:layout_height="@dimen/buttonSearchHeight"
                        android:layout_weight="7"
                        style="@style/editSearchView"
                        android:theme="@style/editSearchView"
                        android:hint="@string/searchLocation"
                        android:lines="@integer/max_line_1"
                        android:singleLine="true"
                        android:ellipsize="end"
                        />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/width0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:src="@drawable/ic_search_gray_24dp"/>

                </LinearLayout>

                <LinearLayout
                    android:paddingBottom="@dimen/padding10dp"
                    android:paddingTop="@dimen/padding10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding5dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="@dimen/width0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:src="@drawable/ic_picker_map"
                        android:layout_weight="1"/>

                    <TextView
                        android:paddingLeft="@dimen/padding10dp"
                        android:layout_width="@dimen/width0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/pickOnMapView"
                        android:layout_weight="9"
                        android:textStyle="bold"
                        android:textSize="@dimen/fontMediumSmall"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rclDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10dp"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
